# duckdb

./: .clang-format  .clang-tidy  .clangd  .codecov.yml  .codespellrc  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .sanitizer-leak-suppressions.txt  .sanitizer-thread-suppressions.txt  .travis.yml  AGENTS.md  AI_POLICY.md  CITATION.cff  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile_Anaconda  Dockerfile_Colab  Doxyfile  DuckDBConfig.cmake.in  DuckDBConfigVersion.cmake.in  DuckDBInstallation.cmake  FIX_19788_ANALYSIS.md  FS.json  FUNDING.json  ISSUE_22267_REPRO_AND_VERIFY.md  LICENSE  Makefile  PAGER_IMPLEMENTATION.md  PARITY_REPORT.md  PIVOT  PR_DESCRIPTION.md  PR_DESCRIPTION_21492.md  PR_DESCRIPTION_22096.md  (+77 more)
Orca/: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  README.format.md  README.md  SECURITY.md  StyleGuide.md  clang-format.intent.yaml
Orca/cmake/: FindAtomics.cmake  FindXerces.cmake  aarch64.toolchain.cmake  i386.toolchain.cmake  x86_64.toolchain.cmake
Orca/libgpdbcost/: CMakeLists.txt
benchmark/: CMakeLists.txt  README.md  benchmark_html.py  benchmark_runner.cpp  generate_query_graph.py  group_descriptions.list  interpreted_benchmark.cpp  row_number.benchmark  run_benchmarks.py  run_benchmarks_forever.py
benchmark/aoc24/: LICENSE  README.md  aoc24.benchmark.in  aoc24.csv  day01.benchmark  day02.benchmark  day03.benchmark  day04.benchmark  day05.benchmark  day06.benchmark  day07.benchmark  day08.benchmark  day09.benchmark  day10.benchmark  day11.benchmark  day12.benchmark  day13.benchmark  day14.benchmark  day15.benchmark  day16.benchmark  day17.benchmark  day18.benchmark  day19.benchmark  day20.benchmark  day21.benchmark  day22.benchmark  day23.benchmark  day24.benchmark  day25.benchmark
benchmark/appian_benchmarks/: appian.benchmark.in  q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06.benchmark  q07.benchmark  q08.benchmark
benchmark/cast/: double_bignum.benchmark  double_varint.benchmark  hugeint_bignum.benchmark  hugeint_varint.benchmark  integer_bignum.benchmark  small_double_bignum.benchmark  small_double_varint.benchmark  small_varchar_bignum.benchmark  smallint_bignum.benchmark  smallint_varint.benchmark  varchar_bignum.benchmark  varchar_bignum_100k.benchmark  varchar_bignum_10M.benchmark  varchar_bignum_1M.benchmark  varchar_varint.benchmark  varchar_varint_100k.benchmark  varchar_varint_10M.benchmark  varchar_varint_1M.benchmark  varint_varchar_100k.benchmark
benchmark/clickbench/: clickbench-noresult.benchmark.in  clickbench.benchmark.in  clickbench_load.benchmark.in  q00.benchmark  q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q06.benchmark  q07.benchmark  q09.benchmark  q10.benchmark  q11.benchmark  q13.benchmark  q14.benchmark  q16.benchmark  q17.benchmark  q18.benchmark  q19.benchmark  q21.benchmark  q22.benchmark  q23.benchmark  q24.benchmark  q26.benchmark  q29.benchmark  q30.benchmark  q31.benchmark  q32.benchmark  q33.benchmark  q35.benchmark  q38.benchmark  q39.benchmark  q40.benchmark  q41.benchmark  q42.benchmark  q43.benchmark
benchmark/csv/: 16_byte_values.benchmark  glob_reorder.benchmark  ignore_errors.benchmark  multiple_read.benchmark  multiple_small_files.benchmark  multiple_small_files_union_by_name.benchmark  multiple_small_read_csv.benchmark  read.benchmark  small_csv.benchmark  sniffer.benchmark  sniffer_quotes.benchmark  time_type.benchmark
benchmark/dbwrapper/: CMakeLists.txt  sqlite_benchmark.cpp
benchmark/expression_reordering/: CMakeLists.txt  adaptive_reordering.cpp  benchmark_expressions.cpp  expression_reordering.cpp
benchmark/fborri/: CMakeLists.txt  fborri.cpp
benchmark/feature/: create_feature.benchmark  feature.benchmark.in  load.sql  refresh.benchmark  refresh_full.benchmark  refresh_incremental.benchmark  refresh_serve_interleaved_retain3.benchmark  refresh_serve_interleaved_retain5.benchmark  serve.benchmark
benchmark/hep_benchmarks/: hep.benchmark.in  load.sql  q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06_1.benchmark  q06_2.benchmark  q07.benchmark  q08.benchmark
benchmark/imdb/: 01a.benchmark  01b.benchmark  01c.benchmark  02a.benchmark  02b.benchmark  02c.benchmark  02d.benchmark  03a.benchmark  03b.benchmark  03c.benchmark  04a.benchmark  04b.benchmark  04c.benchmark  05a.benchmark  05b.benchmark  05c.benchmark  06a.benchmark  06b.benchmark  06c.benchmark  06d.benchmark  06e.benchmark  06f.benchmark  07a.benchmark  07c.benchmark  08a.benchmark  08b.benchmark  08c.benchmark  08d.benchmark  09a.benchmark  09b.benchmark  09c.benchmark  09d.benchmark  10a.benchmark  10b.benchmark  10c.benchmark  11a.benchmark  11b.benchmark  11c.benchmark  11d.benchmark  12b.benchmark  (+67 more)
benchmark/include/: benchmark.hpp  benchmark_configuration.hpp  benchmark_runner.hpp  duckdb_benchmark.hpp  duckdb_benchmark_macro.hpp  interpreted_benchmark.hpp  sqlite_benchmark.hpp  system.hpp
benchmark/ingestion/: load_tpcds.sql  load_tpcds_sf10.sql  load_tpch.sql  load_tpch_sf10.sql
benchmark/ldbc/: README  (+5 more)
extension/: CMakeCache.txt  CMakeLists.txt  ExtensionDistribution.md  Makefile  README.md  dummy_static_extension_loader.cpp  extension_build_tools.cmake  extension_config.cmake  extension_config_local.cmake  extension_helper.hpp  generated_extension_headers.hpp.in  generated_extension_loader.cpp.in  test_signature.pem
src/: CMakeLists.txt  Makefile  README.md  version.rc
test/: CMakeLists.txt  Makefile  README.md  checkpoint_auto.test  checkpoint_explicit.test  checkpoint_force.test  checkpoint_reset.test  empty_table_name.test  index_key.test  issue_22144.test  load.sql  mallocfailtest.cpp  microbenchmark.cpp  overlay.test  schema.sql  smoke_tests.list  temp.test  test.cpp  test.sql  test.sql.in  test.test  tmp.test  tmp1.test  tmp2.test  tmp3.test  unittest.cpp  unittest_fuzz.cpp  unittest_landlock.cpp
tools/: CMakeLists.txt  Makefile  release-pip.py  upload-s3.py
(+26395 files in other folders)
